# Weather-App-Client

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  build.rs  entrypoint.sh  index.html
.github/workflows/: azure-publish-client.yml  client-ci.yml  docker-build.yml
public/: geolocation.js  init_map.js  place_chosen.js  styles.css
src/: auth.rs  main.rs
src/components/: forecast.rs  map.rs  mod.rs  navbar.rs
src/pages/: home.rs
src/utils/: date_utils.rs  local_storage_handler.rs  mod.rs  weather_utils.rs
